fix(theme/table): add overflow:auto for scrollable table

--- a/projects/kaltura-ng/mc-theme/themes/default/scss/primeng/theme.scss
+++ b/projects/kaltura-ng/mc-theme/themes/default/scss/primeng/theme.scss
@@ -267,6 +267,7 @@ p-table {
   }
   .p-datatable-scrollable-body {
     max-height: none !important;
+    overflow-y: auto !important;
   }
   .p-datatable-scrollable-body>table>.p-datatable-tbody>tr:first-child>td{
     border-top: 1px solid white;
